# mcp-tef

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: claude-code-review.yml  claude.yml  code-checks.yml  code-quality-cli.yml  code-quality-with-ollama.yml  code-quality.yml  image-build.yml  release-cli.yml  release.yml  security.yml
cli/: README.md  pyproject.toml
cli/src/mcp_tef_cli/: __init__.py  __main__.py  client.py  config.py  constants.py  docker_client.py  models.py  output.py  utils.py
cli/src/mcp_tef_cli/commands/: deploy.py  similarity.py  stop.py  test_case.py  test_run.py  tool_quality.py
cli/tests/: conftest.py
cli/tests/integration/: test_cli_deploy.py  test_similarity.py  test_test_case.py  test_test_run.py  test_tool_quality.py
cli/tests/scripts/: common.sh  test_cases.json  test_deploy.sh  test_query_alignment.sh  test_query_alignment_from_file.sh  test_similarity.sh  test_tool_quality.sh
cli/tests/unit/: test_parsing.py  test_similarity_parsing.py  test_test_case_parsing.py  test_tool_quality_parsing.py
docs/: README.md  constitution.md  current-specification.md  data-model.md  openapi.yaml  pypi-trusted-publishing-setup.md  quickstart.md  technology-decisions.md  testing-with-ollama.md  tls-configuration.md
mcp-tef-models/: README.md  pyproject.toml
mcp-tef-models/src/mcp_tef_models/: __init__.py  enums.py  schemas.py
scripts/: README.md  analyze_similarity.sh  demo.ipynb  demo.js  demo.py  demo.sh  register_and_analyze.sh  split_test_data.py  test_api.sh
src/experiments/eval_tool_description/: .gitignore  __main__.py  models.py  prompts.py  runner.py  util.py
src/experiments/eval_tool_description/input_data/: mcp_tools_cleaned.json  mcp_tools_cleaned_sample.json
src/mcp_tef/: __main__.py
src/mcp_tef/api/: app.py  errors.py  mcp_servers.py  metrics.py  similarity.py  test_cases.py  test_runs.py  tool_quality.py
src/mcp_tef/config/: logging_config.py  prompts.py  settings.py
src/mcp_tef/models/: enums.py  evaluation_models.py  llm_models.py  schemas.py
src/mcp_tef/services/: confidence_analyzer.py  embedding_service.py  evaluation_service.py  json_schema_utils.py  llm_service.py  mcp_loader.py  metrics_service.py  parameter_validator.py  recommendation_service.py  similarity_service.py  tls_service.py  tool_call_matcher.py  tool_quality_service.py
src/mcp_tef/storage/: database.py  model_settings_repository.py  schema.sql  test_case_repository.py  test_run_repository.py  tool_call_match_repository.py  tool_repository.py
tests/: conftest.py
tests/contract/: test_metrics_api.py  test_similarity_api.py  test_test_cases_api.py  test_test_runs_api.py  test_tool_quality_api.py  test_tools_api.py
tests/data/: mcp_tools_10.json  mcp_tools_25.json  mcp_tools_5.json  mcp_tools_cleaned.json
tests/integration/: test_metrics_calculation.py  test_overlap_matrix.py  test_similarity_analysis.py  test_tls_configuration.py  test_tool_history.py  test_tool_ingestion.py  test_tool_selection.py
tests/unit/: test_json_schema_utils.py  test_llm_service.py  test_test_run_repository.py
